@@ -35,9 +35,9 @@ casting_rate: 100
 // Delay time after casting (Note 2)
 delay_rate: 100
 
-// Is the delay time is dependent on the caster's DEX? (Note 1)
-// Note: On Official servers Dex does NOT affect delay time
-delay_dependon_dex: no
+// Is the delay time dependant on the caster's AGI? (Note 1)
+// Note: On Official servers no stat affects delay time
+delay_dependon_agi: no
 
 // Minimum allowed delay for ANY skills after casting (in miliseconds) (Note 1)
 // Note: Setting this to anything above 0 can stop speedhacks.
@@ -58,6 +58,8 @@ default_skill_delay: 300
 no_skill_delay: 2
 
 // At what dex does the cast time become zero (instacast)
+// If delay_dependon_agi is enabled, this is also the amount of agi required 
+// for zero delay on skills.
 castrate_dex_scale: 150
 
 // Will normal attacks be able to ignore the delay after skills? (Note 1)
